# alternet

./: .gitignore  .md  Cargo.toml  Dockerfile  Dockerfile.bootstrap  README.md  arion-compose.nix  flake.nix  proof-of-transport.md  readme.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
app/alternet/: Cargo.toml
app/alternet/src/: connection_event_handler.rs  did.rs  domain.rs  event.rs  ipv4.rs  key.rs  main.rs  opcode.rs  record.rs  records.rs
app/mchain/: Cargo.toml
app/mchain/src/: main.rs
app/node/: Cargo.toml  Dockerfile  build.rs  readme.md
app/node/proto/: an.proto
app/node/proto_target/: an.rs
app/node/src/: cmn.rs  config.rs  env_key.rs  grpc.rs  identity.rs  main.rs  saga.rs  stream.rs  sub_system.rs
app/node/src/cmn/: packet.rs
app/node/src/config/: bootstrap.rs  client.rs  mode.rs  relay.rs  server.rs
app/node/src/grpc/: proto.rs
app/node/src/saga/: proof_request.rs  reservation.rs
app/node/src/sub_system/: bootstrap.rs  broker.rs  connection_manager.rs  dht_poison.rs  dialer.rs  discovery_monitor.rs  firewall.rs  forward.rs  handshake.rs  identity_spoofer.rs  kad.rs  metadata.rs  monitor.rs  relay_killer.rs  router.rs  routing_monitor.rs  search_engine.rs  self_destruct.rs  session_manager.rs  slug.rs  stream.rs
app/node/template/: an.toml
app/node/tests/: an.toml  dual_home.rs  end_to_end.rs  image.rs  main.rs  multi_node.rs  readme.md
app/node/tests/report/: 0.1.x.excalidraw  0.1.x.md  0.2.x.md
app/simulation-item/: readme.md
app/simulation-item/isp/: Cargo.toml
app/simulation-item/router/: Cargo.toml
app/simulation-item/router/src/: main.rs
app/simulation-item/switch/: Cargo.toml
contract/soroban/mock_congestion_monitor/: Cargo.toml
contract/soroban/mock_congestion_monitor/src/: lib.rs
contract/soroban/mock_dns/: Cargo.toml
contract/soroban/mock_dns/src/: lib.rs
contract/soroban/mock_erc_20/: Cargo.toml
contract/soroban/mock_erc_20/src/: lib.rs
contract/soroban/mock_nft/: Cargo.toml
contract/soroban/mock_nft/src/: lib.rs
contract/soroban/mock_pool/: Cargo.toml
contract/soroban/mock_pool/src/: lib.rs
doc/: HISTORY.md  MILESTONE.md
docs/: AUTHORITY.md  MILESTONE.md
htx/: Cargo.toml
htx/src/: crypto.rs  frame.rs  lib.rs
image/: Cargo.toml
image/src/: alpine.rs  lib.rs  node.rs  router.rs
image_util/: Cargo.toml
image_util/src/: lib.rs
lib/bus/: Cargo.toml
lib/bus/src/: any_handler.rs  handler.rs
lib/bytes/: Cargo.toml
lib/bytes/src/: lib.rs
lib/cryptography/: Cargo.toml
lib/cryptography/src/: bytes.rs  encrypted.rs  key.rs  lib.rs  message.rs  pair.rs  public_key.rs  secret_key.rs  signature.rs  signed.rs
lib/cryptography_algorithm/dilithium3/: Cargo.toml
lib/cryptography_algorithm/dilithium3/src/: lib.rs
lib/cryptography_algorithm/ed25519/: Cargo.toml
lib/cryptography_algorithm/ed25519/src/: lib.rs
lib/cryptography_algorithm/kyber1024/: Cargo.toml
lib/cryptography_algorithm/kyber1024/src/: lib.rs
lib/e2e/: Cargo.toml
lib/e2e/src/: cidr.rs  container.rs  lib.rs  network.rs
lib/e2e/tests/: main.rs
lib/kore/: Cargo.toml
lib/kore/src/: lib.rs
lib/orchestrator/: Cargo.toml
lib/orchestrator/src/: lib.rs  network.rs  promise.rs  runtime.rs  suspend.rs
lib/p2p/: Cargo.toml
lib/p2p/src/: framework.rs  lib.rs
lib/p2p/src/framework/: event.rs
lib/packet/: Cargo.toml
lib/packet/src/: lib.rs  opcode.rs  unsigned.rs
lib/transport/: Cargo.toml
lib/transport/src/: lib.rs
src/: behaviour.rs  control.rs  dns_resolver.rs  lib.rs  main.rs  network.rs  record.rs  transport.rs
src/app/: domain.rs  event_handler.rs  mod.rs  network.rs
src/node/: domain.rs  mod.rs  swarm_component.rs
task/: Cargo.toml
task/src/: main.rs
