[package]
name = "libp2p-alternet"
license = "Unlicense"
edition = "2024"

[features]
default = ["autonat", "dcutr", "mdns"]

# peer discovery

# Automatic NAT detection
autonat = ["libp2p/autonat"]
# Direct Connection Upgrade Through Relay
dcutr = ["libp2p/dcutr"]
# Multicast DNS
mdns = ["libp2p/mdns", "libp2p/tokio"]

[dependencies]
libp2p = { version = "0.56.0", features = [
    "identify",
    "kad",
    "macros",
    "relay",
], default-features = false }
ouroboros = "0.18.5"
parking_lot = "0.12.5"
pin-project = "1.1.10"
