[workspace]
resolver = "3"
members = [
    "app/node",
    "app/simulation-item/isp",
    "app/simulation-item/router",
    "app/simulation-item/switch",
    "image",
    "image_util",
    "lib/e2e",
    # ... coming soon ...
    "task"
]

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dead_code = "warn"
unused = "warn"
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
unused_assignment = "warn"
unused_parens = "warn"
unused_unsafe = "warn"
unused_must_use = "warn"
unused_macros = "warn"
unused_extern_crates = "warn"
unused_features = "warn"
unused_labels = "warn"
unused_doc_comments = "warn"
unused_result_ok = "forbid"
unused_trait_names = "forbid"
unsafe_code = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
undocumented_unsafe_blocks = "forbid"
unreachable = "forbid"
unreachable_pub = "warn"
needless_pass_by_value = "warn"
needless_borrow = "warn"
needless_return = "forbid"
unwrap_used = "forbid"
expect_used = "forbid"
panic = "forbid"
panic_in_result_fn = "forbid"
lossy_float_literal = "forbid"
cast_possible_truncation = "forbid"
cast_sign_loss = "forbid"
cast_possible_wrap = "forbid"
float_cmp = "forbid"
missing_const_for_fn = "warn"
empty_drop = "deny"
infinite_loop = "deny"
mod_module_files = "deny"
module_name_repetitions = "deny"
multiple_inherent_impl = "deny"
partial_pub_fields = "deny"
ref_patterns = "deny"
renamed_function_params = "deny"
semicolon_outside_block = "deny"
shadow_unrelated = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "forbid"
use_debug = "forbid"
verbose_file_reads = "forbid"
no_effect = "forbid"
redundant_closure_for_method_calls = "forbid"
option_option = "forbid"
option_as_ref_cloned = "forbid"
missing_fields_in_debug = "forbid"
same_functions_in_if_condition = "forbid"
too_many_lines = "warn"
unimplemented = "warn"
todo = "warn"
missing_debug_implementations = "warn"
map_err_ignore = "forbid"
implicit_clone = "warn"
mutex_atomic = "warn"
inefficient_to_string = "warn"
range_minus_one = "forbid"
range_plus_one = "forbid"
indexing_slicing = "forbid"
string_slice = "forbid"
str_to_owned = "forbid"