[package]
name = "alternet"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "=2.0.17"
modwire = "=0.1.0"
async-trait = "*"
tokio = { version = "=1.48.0", features = ["full"] }
libp2p = { version = "=0.56.0", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "ping",
    "identify",
    "relay",
    "macros",
    "tls",
    "tokio",
    "gossipsub",
    "request-response"
] }
jsonwebtoken = "*"
redb = "*"