[package]
name = "alternet"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "*"
anyhow = "*"
redb = "*"
derive_more = "*"
getset = "*"
rkyv = "*"
sha2 = "*"
libp2p = { version = "*", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "ping",
    "identify",
    "relay",
    "macros",
    "tls",
    "tokio",
    "gossipsub",
    "request-response",
    "dcutr"
] }

[dependencies.orchestrator]
version = "*"
path = "../../lib/orchestrator"

[dependencies.tokio]
version = "*"
features = ["full"]

[dependencies.p2p]
version = "*"
path = "../../lib/p2p"

[dependencies.jsonwebtoken]
version = "*"
features = ["rust_crypto"]

[dependencies.serde]
version = "*"
features = ["derive"]