[package]
name = "node"
version = "0.1.0"
edition = "2024"
readme = "readme.md"
build = "build.rs"
publish = false

[dependencies]
rand = "*"
async-trait = "*"
futures = "*"
tokio = { version = "1.48.0", features = ["full"] }
libp2p = { version = "0.56.0", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "ping",
    "identify",
    "relay",
    "macros",
    "tls",
    "gossipsub",
    "request-response",
    "dcutr",
    "autonat",
    "tokio"
] }
toml = "*"
bon = "*"
serde = { version = "*", features = ["derive"] }
tonic = "0.14.5"
tonic-prost = "*"
tonic-reflection = "*"
prost = "0.14.3"
fern = "*"
log = "*"
colored = "*"
humantime = "*"
modwire = "*"
derive_more = { version = "*", features = ["full"] }
num = "0.4.3"
enum_dispatch = "*"
clap = { version = "*", features = ["derive"] }
ubyte = "*"
cfg-if = "*"
anyhow = "*"
url = "*"
nanoid = "*"

[dev-dependencies]
testcontainers = "*"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
bollard = "*"
cargo_metadata = "*"
futures-util = "*"
reqwest = "*"
async-trait = "*"
chrono = "*"
getset = "*"
derive_more = "*"
serde = { version = "*", features = ["derive"] }
derivative = "*"
bon = "*"
strum = { version = "*", features = ["derive"] }
thiserror = "*"
image = { version = "*", path = "../../image" }
e2e = { version = "*", path = "../../lib/e2e" }

[build-dependencies]
tonic-prost = "*"
tonic-prost-build = "0.14.5"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
required-features = ["bootstrap"]

[[bin]]
name = "client"
path = "src/main.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/main.rs"
required-features = ["server"]

[[bin]]
name = "relay"
path = "src/main.rs"
required-features = ["relay"]

[[bin]]
name = "malicious_bootstrap"
path = "src/main.rs"
required-features = ["malicious_bootstrap"]

[[bin]]
name = "malicious_client"
path = "src/main.rs"
required-features = ["malicious_client"]

[[bin]]
name = "malicious_server"
path = "src/main.rs"
required-features = ["malicious_server"]

[[bin]]
name = "malicious_relay"
path = "src/main.rs"
required-features = ["malicious_relay"]

[features]
default = ["server", "end_to_end"]
bootstrap = []
client = []
server = []
relay = []
malicious_bootstrap = []
malicious_client = []
malicious_server = []
malicious_relay = ["tokio/full"]
grpc = []
end_to_end = []