[package]
name = "orchestrator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "*"
anyhow = "*"
tokio = { version = "1.48.0", features = ["full"] }
tokio-scoped = "*"
p2p = { version = "*", path = "../p2p" }
bus = { version = "*", path = "../bus" }
derive_more = { version = "*", features = ["full"] }