[package]
name = "cryptography_algorithm_ed25519"
version = "0.1.0"
edition = "2024"

[dependencies]
lib_cryptography = { version = "*", package = "cryptography", path = "../../cryptography" }
lib_bytes = { version = "*", package = "bytes", path = "../../bytes" }
ed25519-dalek = "*"
ed25519 = "*"
rand = "*"
bytes = "*"